src/components/mgt-people-picker/mgt-people-picker.scss
/**
 * -------------------------------------------------------------------------------------------
 * Copyright (c) Microsoft Corporation.  All Rights Reserved.  Licensed under the MIT License.
 * See License in the project root for license information.
 * -------------------------------------------------------------------------------------------
 */

@import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
@import '../../styles/shared-styles.scss';

$list-margin: var(--list-margin, 20px 4px 8px 8px);
$avatar-margin: var(--avatar-margin, 0 4px 0 0);
$avatar-size-s: var(--avatar-size-s, 24px);
$avatar-size: var(--avatar-size, 48px);
$initials-color: var(--initials-color, white);
$initials-background-color: var(--initials-background-color, #{$ms-color-magenta});
$accent-color: var(--accent-color, #0078d4);

$input-border: var(--input-border, 2px solid #b3b0ad);
$input-border-bottom: var(--input-border-bottom, $input-border);
$input-border-right: var(--input-border-right, $input-border);
$input-border-left: var(--input-border-left, $input-border);
$input-border-top: var(--input-border-top, $input-border);

$input-hover-color: var(--input-hover-color, #323130);
$input-focus-color: var(--input-focus-color, #0078d4);
$input-background-color: var(--input-background-color, var(--people-list-background-color, white));

$dropdown-background-color: var(--dropdown-background-color, white);
$dropdown-item-hover-background: var(--dropdown-item-hover-background, #f1f1f1dd);

$placeholder-default-color: var(--placeholder-default-color, #605e5c);
$placeholder-focus-color: var(--placeholder-focus-color, #323130);
$font-color: var(--font-color, #323130);

:host {
  border-radius: 2px;
  font-family: var(--default-font-family, 'Segoe UI');
  height: 38px;
}
:host .root,
mgt-people-picker .root {
  display: block;
}

:host .people-picker,
mgt-people-picker .people-picker {
  position: relative;
  margin: 7px 0 0 0;
  background-color: $input-background-color;
  padding-bottom: 6px;
  border: $input-border;
  border-bottom: $input-border-bottom;
  border-left: $input-border-left;
  border-top: $input-border-top;
  border-right: $input-border-right;
  &:hover {
    border-color: $input-hover-color;
  }
  &.focused {
    border-color: $input-focus-color;
  }
}

:host .flyout-root,
mgt-people-picker .flyout-root {
  padding: 0;
  border-radius: 2px;
  background-color: $dropdown-background-color;
  min-width: 260px;
  overflow-y: auto;
  text-align: left;
  list-style-type: none;

  li {
    cursor: pointer;
  }
}

:host .people-selected-input,
mgt-people-picker .people-selected-input {
  font-family: var(--default-font-family, 'Segoe UI');
  position: relative;
  border: none;
  line-height: normal;
  outline: none;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 19px;
  background-color: $input-background-color;
  color: $font-color;
  &::placeholder {
    color: $placeholder-default-color;
  }
  &:focus::placeholder {
    color: $placeholder-focus-color;
  }
}

:host .people-selected-list,
mgt-people-picker .people-selected-list {
  display: flex;
  flex-wrap: wrap;
  vertical-align: middle;
  margin: 0 2px 0 0;
  list-style-type: none;
  padding-left: 8px;
  font-style: normal;
  font-weight: normal;
}
.CloseIcon,
mgt-people-picker .CloseIcon {
  line-height: normal;
  font-family: 'FabricMDL2Icons';
  padding-right: 8px;
  padding-left: 4px;
  margin-top: 0px;
  cursor: pointer;
  color: $font-color;
}
:host .SearchIcon,
mgt-people-picker .SearchIcon {
  font-family: 'FabricMDL2Icons';
  color: $accent-color;
}

:host .people-person,
mgt-people-picker .people-person {
  display: flex;
  margin: 5px 5px 0px 0;
  align-items: center;
  background-color: rgba(196, 196, 196, 0.24);
  border-radius: 15px;
  height: 24px;
  white-space: nowrap;
  text-overflow: ellipsis;
}

:host .list-person,
mgt-people-picker .list-person {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 12px;
  font-style: normal;
  font-weight: 600;
  font-size: 14px;

  &:hover {
    background-color: $dropdown-item-hover-background;
  }
}

:host .list-person.focused,
mgt-people-picker .list-person.focused {
  background-color: $dropdown-item-hover-background;
}

:host .people-person-text,
mgt-people-picker .people-person-text {
  font-size: 14px;
  font-weight: normal;
  margin: 0;
  padding: 0;
}

:host .input-search,
mgt-people-picker .input-search {
  margin: 6px 2px 1px 3px;
}
:host .input-search.input-search--start,
mgt-people-picker .input-search.input-search--start {
  margin: 6px 0px 1px 0px;
  line-height: normal;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
}

:host .people-picker-input,
mgt-people-picker .people-picker-input {
  display: flex;
  order: 2;
  background-color: $input-background-color;
  margin: $avatar-margin;
  font-size: 14px;
  line-height: 19px;
  cursor: text;
}

:host .duplicate-person,
mgt-people-picker .duplicate-person {
  text-decoration: none;
  border-bottom: 1px solid red;
}

:host .remove-person-button,
mgt-people-picker .remove-person-button {
  background: #767676;
  transform: matrix(-0.71, -0.71, 0.71, -0.71, 0, 0);
}

:host .remove-person-button-secondary,
mgt-people-picker .remove-person-button-secondary {
  background: #767676;
  transform: matrix(0.71, -0.71, 0.71, 0.71, 0, 0);
}

:host .person-display-name,
mgt-people-picker .person-display-name {
  max-width: 100px;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin-left: 8px;
  font-style: normal;
  font-weight: 600;
  font-size: 14px;
  line-height: 19px;
  text-align: center;
  color: #000000;
}

mgt-person {
  --avatar-size-s: 32px;
  margin-left: 12px;
  cursor: default;
}
.selected-person {
  --avatar-size-s: 24px;
  margin-left: 0px;
  --color: $font-color;
  color: $font-color;
  margin-bottom: 1px;
}

:host .search-error-text,
:host .loading-text,
mgt-people-picker .search-error-text,
mgt-people-picker .loading-text {
  font-family: var(--default-font-family, 'Segoe UI');
  font-style: normal;
  font-weight: 600;
  font-size: 14px;
  line-height: 19px;
  text-align: center;
  color: $font-color;
  margin-left: 50px;
  margin-right: 50px;
}

:host .SearchErrorIcon,
mgt-people-picker .SearchErrorIcon {
  display: inline-block;
  font-family: 'FabricMDL2Icons';
  color: #cf0000;
}

:host .message-parent,
mgt-people-picker .message-parent {
  margin: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  vertical-align: middle;
}

:host .highlight-search-text,
mgt-people-picker .highlight-search-text {
  font-weight: bold;
}
:host .people-person-job-title,
mgt-people-picker .people-person-job-title {
  flex: 100%;
  order: 3;
  font-weight: normal;
  font-size: 12px;
  &.uppercase {
    text-transform: uppercase;
  }
}
:host .people-person-text-area,
mgt-people-picker .people-person-text-area {
  margin-left: 13px;
  flex: 1 1 0;
  max-height: 40px;
  overflow: hidden;
  color: $font-color;
}

